# v_repExtNaoqi

./: .gitignore  CMakeLists.txt  README.md  README.txt  launch.sh
include/: v_repExtRomeo.h  v_repExtRomeoInclude.h  v_repExtRomeoSensors.h  v_repRomeo.h
scenesVrep/: Romeo_model.ttt  romeo_blob_tracking.ttt  romeo_nice_look.ttt
scripts/: findSimSDK.sh  moveLib.sh  setSDKSIM.sh
scripts/scriptsSimSDK/: findNAOQISDK.sh
src/: v_repExtRomeo.cpp  v_repExtRomeoSensors.cpp  v_repRomeo.cpp
